--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ Flask-Mail==0.9.1
 Flask-Migrate==2.4.0
 Flask-RESTful==0.3.7
 Flask-SocketIO==3.3.2
-Flask-SQLAlchemy==2.4.3
+Flask-SQLAlchemy==2.5.1
 future==0.17.1
 gevent==1.4.0
 greenlet==0.4.15
@@ -39,7 +39,7 @@ pandas==1.0.5
 pefile==2018.8.8
 pycparser==2.19
 PyJWT==1.7.1
-PyMySQL==0.9.3
+PyMySQL==1.0.2
 python-dateutil==2.8.0
 python-editor==1.0.4
 python-engineio==3.5.0
@@ -52,6 +52,7 @@ six==1.12.0
 sqlacodegen==2.2.0
 SQLAlchemy==1.3.1
 SQLAlchemy-serializer==0.8
+typing-extensions==3.10.0.0
 tzlocal==2.1
 urllib3==1.24.1
 Werkzeug==0.15.0
